# mindspore_science

./: requirements.txt
MindSPONGE/: CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
MindSPONGE/applications/: README.md
MindSPONGE/applications/MEGAProtein/: main.py
MindSPONGE/applications/MEGAProtein/config/: model.yaml
MindSPONGE/applications/MEGAProtein/data/: hhsearch.py  kalign.py  msa_query.py
MindSPONGE/applications/MEGAProtein/model/: __init__.py  fold.py
MindSPONGE/applications/MEGAProtein/module/: loss_module.py  structure.py  template_embedding.py
MindSPONGE/applications/molecular_dynamics/polypeptide/: README_CN.md
MindSPONGE/applications/molecular_dynamics/protein_relax/: protein_relax_pipeline.py
MindSPONGE/applications/research/DeepFRI/: requirements.txt
MindSPONGE/applications/research/GraphDTA/: requirements.txt
MindSPONGE/applications/research/KGNN/: requirements.txt
MindSPONGE/applications/research/UFold/: requirements.txt
MindSPONGE/applications/research/pafnucy/: requirements.txt
MindSPONGE/applications/structure_prediction/: data.py  dataset.py  eval.py  evoformer.py  model.py  structure.py  template_embedding.py
MindSPONGE/applications/structure_prediction/config/: base.yaml  config.py  data.yaml  model.yaml
MindSPONGE/applications/structure_prediction/data/: hhsearch.py  kalign.py  protein_feature.py  templates.py
MindSPONGE/mindsponge/: __init__.py
MindSPONGE/mindsponge/python/: __init__.py
MindSPONGE/mindsponge/python/callback/: h5md.py  (+2 more)
MindSPONGE/tests/: polypeptide.yaml  test_simulator.py
(+253 files in other folders)
